<resources>
    <string name="app_name">FUO Exeat</string>
    <string name="ADMOB_APP_ID">n</string>
    <string name="ADMOB_APP_ID_TEST">ca-app-pub-3940256099942544~3347511713</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fuo_exaet_app">FUO Exeat App</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="help">Help</string>
    <string name="permission_with_ease">Permission With Ease</string>
    <string name="less_paper_work">Less Paper Work</string>
    <string name="request_for_hall_pass">Request for your hall pass with ease by simply submitting your request from the FUO Exaet App</string>
    <string name="grant_exaet_request">Grant Exeat leave from the comfort of your office, at the speed of light</string>
    <string name="home">Home</string>
    <string name="requests">Requests</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="email_address">Email Address</string>
    <string name="hello_there_welcome">Hello there,\nWelcome back</string>
    <string name="login_as_placeholder">You are logging in as a %s</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="not_d_placeholder">Not %s</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>

    <string name="welcome_fuo_exaet">Welcome to,\nFUO Exeat App</string>
    <string name="signing_as_placeholder">You are signing in as a %s</string>
    <string name="fullname">Full name</string>
    <string name="matric_number">Matric Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="continue_as">%s as</string>
    <string name="student">Student</string>
    <string name="student_affairs">Student_Coordinator</string>
    <string name="security">Security</string>
    <string name="enter_email_to_reset">Enter your email to reset your password</string>
    <string name="reset">Reset Password</string>
    <string name="rem_password">Remember Password?</string>
    <string name="create_an_account">Create account</string>
    <string name="filter_requests">Filter Requests</string>
    <string name="exaet_requests">Exaet Requests</string>
    <string name="approved_requests">Approved Requests</string>
    <string name="rejected_requests">Rejected Requests</string>
    <string name="pending_requests">Pending Requests</string>
    <string name="departure_time_">Departure Time:</string>
    <string name="arrival_time">Arrival Time</string>
    <string name="title_activity_requests">Requests</string>
    <string name="tab_text_1">All</string>
    <string name="tab_text_2">Pending</string>
    <string name="tab_text_3">Approved</string>
    <string name="tab_text_4">Rejected</string>
    <string name="change_picture">Change Picture</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="department">Department</string>
    <string name="programme">Programme</string>
    <string name="hall_of_resident">Hall of Residence</string>
    <string name="year_of_entry">Year of Entry</string>
    <string name="update_profile">Update Profile</string>
    <string name="key_notification">key_notifications</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="pref_notif_message">Turn on notification to receive message alerts</string>
    <string name="logout">Logout</string>
    <string name="continue_to">Continue</string>
    <string name="field_cant_be_empty">Field can\'t be empty</string>
    <string name="invalid_email">Email not valid</string>
    <string name="invalid_password">The password is invalid, password should more than six digits</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="staff_id">Staff ID</string>
    <string name="password_dont_match">Retype password is not the same as the password entered</string>
    <string name="college">College</string>
    <string name="user_image_cant_empty">An image need to be selected</string>
    <string name="image_selection_error">No image was selected</string>
    <string name="check_email">Check your email</string>
    <string name="error_occur">Error occur</string>
    <string name="view_profile">View Profile</string>
    <string name="approve">Approve</string>
    <string name="decline">Decline</string>
    <string name="request_matric_template"><b>Matric No:</b> %s</string>
    <string name="bsc">Bsc</string>
    <string name="make_pass_request">Make a pass request</string>
    <string name="your_request_forwarded">Your request will automatically be forwarded to student coordinators</string>
    <string name="select_exeat_type">Select exeat type</string>
    <string name="departure_time">Departure Time</string>
    <string name="select_date_">Select Date:</string>
    <string name="select_time_">Select Time:</string>
    <string name="estimated_arrival_time">Estimated Arrival Time</string>
    <string name="location_where_to">Location (Where you are going to)</string>
    <string name="purpose_of_going">Purpose of going</string>
    <string name="submit_request">Submit Request</string>
    <string name="regular_exaet">Regular Exeat</string>
    <string name="vacation_exaet">Vacation Exeat</string>
    <string name="emergency_exaet">Emergency Exeat</string>
    <string name="previous_requests">Previous Requests</string>
    <string name="new_request">New Request</string>
    <string name="location_">Location:</string>
    <string name="request_type_">Request Type:</string>
    <string name="departure_date">Departure Date</string>
    <string name="arrival_date">Arrival Date</string>
    <string name="request_type">Request Type</string>
    <string name="confirmed_by_"><b>%s</b> %s</string>
    <string name="please_wait_request_in_progress">Please wait… Updating request in progress</string>
    <string name="please_check_your_internet">Please check your internet connection</string>
    <string name="request_submitted">Request submitted</string>
    <string name="request_updated">Request updated</string>
    <string name="name_template">%s %s</string>
    <string name="profile_updated">Profile updated</string>
    <string name="no_request_has_been_made">No request has been made</string>
    <string name="no_previous_available">No previous request available for student</string>
    <string name="grant_passage">Grant Passage</string>
    <string name="mark_as_returned">Mark as Returned</string>
    <string name="request_status">Request Status</string>
    <string name="declined_time">Declined Time</string>
    <string name="declined_by">Declined By</string>
    <string name="gate_departure_time">Gate Departure Time</string>
    <string name="gate_arrival_time">Gate Arrival Time</string>
    <string name="request_error">Request Error</string>
    <string name="regular_request_cannot_be_made">You have exceeded the number of regular exeat request that you can make this month, kindly select emergency request if it is compulsory</string>
    <string name="hall_room_number">Hall Room Number</string>
    <string name="user_created">User created</string>
    <string name="current_request_clicked_">Current Request (Clicked Request)</string>
    <string name="personal_profile">Personal Profile</string>
    <string name="because_you_are_a_staff">Because you are a staff, you can create account for other staff</string>
    <string name="create_coordinator">Create Coordinator Account</string>
    <string name="create_security">Create Security Account</string>
    <string name="account_created">Account Created</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="update_password">Update Password</string>
    <string name="password_changed">Password Chnaged</string>
    <string name="change_password">Change Password</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="submit_feature_request">Submit Feature Request</string>
    <string name="we_are_constantly">We are always working on improving the system, report error or submit new feature request.
        \n\n Your bug fix or feature request might be included in the next update</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="submit">Submit</string>
    <string name="report_saved">Report Saved</string>
    <string name="we_love_to_hear">We love to hear from you!</string>
    <string name="email_uniqueness_staff">Email is unique identity, verification will be required to complete the signup process</string>
    <string name="email_uniqueness_student">Your email is your unique identity, you we be required to verify the email to complete your sign up process</string>
    <string name="creating_as_placeholder">You are creating a %s Account</string>
    <string name="not_yet_approved">Coordinator yet to approve</string>
    <string name="card_number">Card number</string>
    <string name="card_full_name">Cardholder\'s full name</string>
    <string name="expiry_date">Expiry date</string>
    <string name="cvv">CVV</string>
    <string name="make_payment">Make Payment</string>
    <string name="invalid_card">Invalid Card</string>
    <string name="invalid_card_message">Card provided in invalid and can\'t be charged, please provide a valid card to proceed</string>
    <string name="you_need_payment">Login successful! to continue using the app, you need to make a one time payment of NGN 1,000. \n\nThe payment is one time and you won\'t be asked to pay again.</string>
    <string name="continue_to_payment">Continue to Payment</string>
    <string name="student_coordinator">Student Coordinator</string>
    <string name="service_charge">Service Charge</string>
    <string name="service_charge_details">This exeat app requires a One-time service \nCharge of <b>N1000</b></string>
    <string name="what_is_cvv">What is CVV?</string>
    <string name="filter_request_range">You can filter the range of the requests to see more specific result</string>
    <string name="starting_date">Starting Date</string>
    <string name="ending_date">Ending Date</string>
    <string name="select_date_range">Select Date Range</string>
    <string name="all">All</string>
    <string name="select_request_status">Select Request Status</string>
    <string name="pending">Pending</string>
    <string name="approved">Approved</string>
    <string name="declined">Declined</string>
    <string name="out_of_school">Out of School</string>
    <string name="completed">Completed</string>
    <string name="filter">Filter</string>
    <string name="matric_number_not_valid">Matric number not valid</string>
    <string name="time_template">%s:%s %s</string>
    <string name="time_template_with_zero">0%s:%s %s</string>
    <string name="invalid_departure_time">You are not allowed to go out after 04:00 PM</string>
    <string name="invalid_arrival_time">You must be back in school before 05:30 PM</string>
    <string name="update_cancelled">Update canceled</string>
    <string name="hod">HOD</string>
    <string name="hod_confirmation">HOD Confirmation</string>
    <string name="approve_vacation_request">Approve Vacation Request</string>
    <string name="hod_is_yet_to_approve_vacation_exeat">Please wait for HOD to confirm Vacation Request</string>
    <string name="search_with_student_name">Search student\'s name or location</string>
</resources>
