<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <item-->
<!--        android:id="@+id/homeDashboardFragment"-->
<!--        android:icon="@drawable/ic_dashboard_16dp"-->
<!--        android:title="@string/home"/>-->

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_account_circle_16dp"
        android:title="@string/profile"/>

    <item
        android:id="@+id/requestsFragment"
        android:icon="@drawable/ic_request_16dp"
        android:title="@string/requests"/>

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings_16dp"
        android:title="@string/settings"/>

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_24dp"
        android:title="Search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
</menu>