<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btn_cancel_dialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    app:srcCompat = "@drawable/ic_decline_24dp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/filter_request_range"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/select_date_range"
                android:textAllCaps="true"
                android:textColor="@color/somehow_black"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:hint="@string/starting_date"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_starting_date"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:focusable="false"
                        android:inputType="none"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:hint="@string/ending_date">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_ending_date"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:focusable="false"
                        android:inputType="none"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/select_exeat_type"
                    android:textAllCaps="true"
                    android:textColor="@color/somehow_black"
                    android:textSize="14sp" />

                <CheckBox
                    android:id="@+id/cb_all_exeat_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:alignContent="stretch"
                app:alignItems="stretch"
                app:flexWrap="wrap">

                <CheckBox
                    android:id="@+id/cb_regular_exeat_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regular_exaet"
                    android:tag="@string/regular_exaet"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <CheckBox
                    android:id="@+id/cb_vacation_exeat_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vacation_exaet"
                    android:tag="@string/vacation_exaet"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <CheckBox
                    android:id="@+id/cb_emergency_exeat_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/emergency_exaet"
                    android:tag="@string/emergency_exaet"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </com.google.android.flexbox.FlexboxLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/select_request_status"
                    android:textAllCaps="true"
                    android:textColor="@color/somehow_black"
                    android:textSize="14sp" />

                <CheckBox
                    android:id="@+id/cb_all_request_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:alignContent="stretch"
                app:alignItems="stretch"
                app:flexWrap="wrap">

                <CheckBox
                    android:id="@+id/cb_request_status_pending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pending"
                    android:tag="PENDING"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <CheckBox
                    android:id="@+id/cb_request_status_approved"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/approved"
                    android:tag="APPROVED"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <CheckBox
                    android:id="@+id/cb_request_status_declined"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/declined"
                    android:tag="DECLINED"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <CheckBox
                    android:id="@+id/cb_request_status_outschool"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/out_of_school"
                    android:tag="OUT_SCHOOL"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <CheckBox
                    android:id="@+id/cb_request_status_completed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/completed"
                    android:tag="COMPLETED"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </com.google.android.flexbox.FlexboxLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/filter"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar"
                android:visibility="visible"
                app:backgroundTint="@color/fountain_green"
                app:cornerRadius="0dp"
                app:rippleColor="@color/fountain_blue" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>